Добавлены атрибуты форме.

--- a/catalog.html
+++ b/catalog.html
@@ -156,7 +156,7 @@
               <h3 class="catalog-products-subtitle">Фильтр:</h3>
             </div>
             <div class="header-sorting-container">
-              <form class="sorting-type">
+              <form class="sorting-type" method="get" action="https://echo.htmlacademy.ru">
                 <label class="sorting-type-item" for="sorting">Сортировка:</label>
                 <select class="selection-control" id="sorting" name="sorting">
                   <option value="popular">Сначала популярные</option>
